--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <div id="player"></div>
         <script type="text/javascript" src="js/player.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
+        <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+        <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
     </body>
 </html>
